Add some notes for i3 about keybindings

--- a/settings/.notes/i3.md
+++ b/settings/.notes/i3.md
@@ -1,12 +1,42 @@
 # i3
-Super is the windows key
 
-## movement
-super-h = "left window"
-super-j = "down window"
-super-k = "up window"
-super-l = "right window"
+## windows
+super+h = switch to left window
+super+j = switch to down window
+super+k = switch to up window
+super+l = switch to right window
+
+super+z = resize window, use hjkl and then escape
+super+w = close window
+super+b = split horizontally
+super+v = split vertically
+super+f = full screen
+
+## layout
+super+i = switch to stacking
+super+o = switch to tabbed
+super+shift+space = floating toggle
 
 ## workspaces
-"super-[0-9]" = "switch to [0-9] workspace"
-"super-shift-[0-9]" = "move window to [0-9] workspace"
+super+[0-9] = switch to [0-9] workspace
+super+shift+[0-9] = move window to [0-9] workspace
+
+## brightness
+super+u = raise brightness
+super+shift+u = lower brightness
+super+ctrl+u = reset brightness
+
+## audio
+super+m = mute
+super+equal = lower volume
+super+shift+equal = raise volume
+
+## tools
+super+n = open notes menu
+super+enter = open terminal
+super+r = open rofi menu
+
+## maintenance
+super+shift+r = restart i3
+super+shift+c = reload config
+super+shift+e = exit i3
